removed height on tag pool box and fixed padding, hashtags will wrap now when full on tasks page

--- a/public/layout/sass/_editing.scss
+++ b/public/layout/sass/_editing.scss
@@ -267,7 +267,7 @@
             overflow-y: auto;
             resize: none;
             margin: 0;
-             color: $fg-grey;
+            color: $fg-grey;
         }
 
         .box {
@@ -284,14 +284,16 @@
 
         .tag-pool {
             width: 100%;
-            height: 30px;
+            height: 100%;
             background: transparentize($fg-grey-light, 0.5);
             border: 1px solid transparentize($fg-grey-light, 0.5);
             
             ul {
                 padding: 0;
+                margin: 0;
+                
                 li {
-                    padding: 2px 0 0 15px;
+                    padding: 0 0 0 10px;
                     font-size: 14px;
                     color: $fg-blue;
                     display: inline-block;
